syntax = "proto3";

package example;

import "dev/restate/ext.proto";

service Greeter {
	option (dev.restate.ext.service_type) = KEYED;

	rpc Greet(GreetRequest) returns (GreetResponse) {};

	rpc MultiWord(GreetRequest) returns (GreetResponse) {};
}

message GreetRequest {
	string name = 1 [(dev.restate.ext.field) = KEY];
}

message GreetResponse {
	string greeting = 1;
}

